# EDSG

./: .gitignore  Economic_Development_Snapshot_Generator_PRD.md  README.md  env.example  pyproject.toml  requirements.txt
.cursor/: mcp.json
app/: config.py  main.py  routes.py  utils.py
app/templates/: dashboard.html
cursor_chat_prompts/: phase1_project_setup.txt  phase2_core_application_logic.txt  phase3_llm_integration.txt  phase4_validation_and_testing.txt  phase5_supabase_integration.txt  phase6_final_testing_and_review.txt  prd.txt
tests/: __init__.py  test_utils.py
