[tool.poetry]
name = "economic-development-snapshot-generator"
version = "1.0.0"
description = "A FastAPI-based application that generates comprehensive economic development snapshots using World Bank data and Large Language Models (LLMs)"
authors = ["Luis Frias <luis.frias@example.com>", "Greg Mercado <greg.mercado@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.20"
pandas = "^2.2.0"
numpy = ">=1.0.0"
requests = "^2.32.0"
aiohttp = "^3.9.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.25"
openai = "^1.60.0"
python-dotenv = "^1.0.0"
supabase = "^2.8.0"
pydantic = "^2.7.4"
jinja2 = "^3.1.3"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.28.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.9.0"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 